Prevent the 'observable' input from scrolling offscreen.

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -14,13 +14,14 @@ body {
 
 div.header {
   position: sticky;
+  height: 3rem;
   top: 0;
   width: 100%;
-  padding: 1rem 0rem 1rem 1rem;
+  padding-left: 0.5rem;
   background: white;
   display: flex;
   flex-flow: row;
-  border-bottom: 1px solid black;
+  border-bottom: 3px solid grey;
   align-items: center;
 }
 
