--- a/app/src/components/Card/style.css
+++ b/app/src/components/Card/style.css
@@ -1,8 +1,7 @@
 @media screen {
   div.card {
-    padding-top: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    display: flex;
+    flex-flow: column;
   }
 
   div.reference {
@@ -15,6 +14,7 @@
   }
 
   div.title {
+    margin-top: 1rem;
     display: flex;
     flex-flow: row;
     background-color: rgb(81, 130, 187);
@@ -94,8 +94,11 @@
   }
 
   div.observable {
+    position: sticky;
+    top: 3rem; /* Set to match the app's '<header>' height */
     display: flex;
     flex-flow: row;
+    border-bottom: 0.1rem solid white;
   }
 
   div.observableLabel {
@@ -113,6 +116,7 @@
     align-items: center;
     justify-content: center;
     border: 1px solid rgb(81, 130, 187);
+    background: white;
   }
 
   div.total {
